Refactored to use template
Signed-off-by: Roberto Alfieri <me@rebtoor.com>

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,3 +1,4 @@
+# vim: set ft=zsh:
 # If you come from bash you might have to change your $PATH.
 # export PATH=$HOME/bin:/usr/local/bin:$PATH
 typeset -U path PATH
@@ -76,6 +77,7 @@ DISABLE_UNTRACKED_FILES_DIRTY="true"
 plugins=(
   alias-finder
   aliases
+  chezmoi
   colored-man-pages
   dnf
   fzf
@@ -123,7 +125,6 @@ export EDITOR='nvim'
 # Example aliases
 # alias zshconfig="mate ~/.zshrc"
 # alias ohmyzsh="mate ~/.oh-my-zsh"
-export SSH_AUTH_SOCK=/run/user/1000/gcr/ssh
 
 # fzf catppuccin theme
 export FZF_DEFAULT_OPTS=" \
@@ -135,4 +136,11 @@ export FZF_DEFAULT_OPTS=" \
 export MANPAGER="sh -c 'col -bx | bat -pl Manpage'"
 export MANROFFOPT="-c"
 
-alias s='kitty +kitten ssh '
+{{ if eq .chezmoi.os "linux" }}
+export SSH_AUTH_SOCK=/run/user/1000/gcr/ssh
+{{ end }}
+
+{{ if eq .chezmoi.os "darwin" }}
+test -e "${HOME}/.iterm2_shell_integration.zsh" && source "${HOME}/.iterm2_shell_integration.zsh"
+{{ end }}
+
