--- a/dot_zprofile.tmpl
+++ b/dot_zprofile.tmpl
@@ -3,6 +3,7 @@ eval "$(/opt/homebrew/bin/brew shellenv)"
 {{ end }}
 
 export CLIPBOARD_THEME="light"
+export PYENV_VIRTUALENV_DISABLE_PROMPT=1
 
 export PYENV_ROOT="$HOME/.pyenv"
 export PATH="$PYENV_ROOT/bin:$PATH"
