[zsh] major refactoring
Signed-off-by: Roberto Alfieri <me@rebtoor.com>

--- a/dot_zprofile.tmpl
+++ b/dot_zprofile.tmpl
@@ -1,10 +1,10 @@
-{{ if eq .chezmoi.os "darwin" }}
+{{- if eq .chezmoi.os "darwin" -}}
+# brew
 eval "$(/opt/homebrew/bin/brew shellenv)"
-{{ end }}
+{{- end }}
 
-export CLIPBOARD_THEME="light"
-export PYENV_VIRTUALENV_DISABLE_PROMPT=1
+# rvm
+source ~/.rvm/scripts/rvm
 
-export PYENV_ROOT="$HOME/.pyenv"
-export PATH="$PYENV_ROOT/bin:$PATH"
+# pyenv
 eval "$(pyenv init --path)"
