--- a/dot_zprofile.tmpl
+++ b/dot_zprofile.tmpl
@@ -1,10 +1,11 @@
 {{- if eq .chezmoi.os "darwin" -}}
 # brew
 eval "$(/opt/homebrew/bin/brew shellenv)"
-{{- end }}
+{{- end -}}
 
 # rvm
 source ~/.rvm/scripts/rvm
 
 # pyenv
 eval "$(pyenv init --path)"
+
