[zsh] templating zshenv file and added restic repo var
Signed-off-by: Roberto Alfieri <me@rebtoor.com>

--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -26,3 +26,8 @@ export CLIPBOARD_THEME="light"
 
 # export PATH
 export PATH
+
+{{ if eq .chezmoi.os "linux" }}
+# export RESTIC_REPOSITORY
+export RESTIC_REPOSITORY=/restic/
+{{ end }}
