--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -9,9 +9,12 @@ fpath+=${ZSH_CUSTOM:-${ZSH:-~/.oh-my-zsh}/custom}/plugins/zsh-completions/src
 
 # fzf catppuccin theme
 export FZF_DEFAULT_OPTS=" \
---color=bg+:#ccd0da,bg:#eff1f5,spinner:#dc8a78,hl:#d20f39 \
---color=fg:#4c4f69,header:#d20f39,info:#8839ef,pointer:#dc8a78 \
---color=marker:#dc8a78,fg+:#4c4f69,prompt:#8839ef,hl+:#d20f39"
+--color=bg+:#313244,bg:#1e1e2e,spinner:#f5e0dc,hl:#f38ba8 \
+--color=fg:#cdd6f4,header:#f38ba8,info:#cba6f7,pointer:#f5e0dc \
+--color=marker:#f5e0dc,fg+:#cdd6f4,prompt:#cba6f7,hl+:#f38ba8"
+
+# bat theme
+export BAT_THEME="Catpuccin-mocha"
 
 # editor
 export EDITOR="nvim"
@@ -22,7 +25,7 @@ export MANPAGER="sh -c 'col -bx | bat -pl Manpage'"
 export MANROFFOPT="-c"
 
 # clipboard
-export CLIPBOARD_THEME="light"
+export CLIPBOARD_THEME="dark"
 
 # export PATH
 export PATH
