[zsh] fixed bat theme name
Signed-off-by: Roberto Alfieri <me@rebtoor.com>

--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -14,7 +14,7 @@ export FZF_DEFAULT_OPTS=" \
 --color=marker:#f5e0dc,fg+:#cdd6f4,prompt:#cba6f7,hl+:#f38ba8"
 
 # bat theme
-export BAT_THEME="Catpuccin-mocha"
+export BAT_THEME="Catppuccin-mocha"
 
 # editor
 export EDITOR="nvim"
